[build-system]
requires = ["setuptools>=65", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "maisen-toolkit"
description = "Reusable Django toolkit by Maisengasse"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Maisengasse", email = "armin@maisengasse.at"}]
keywords = ["django", "totp", "2fa", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=4.2",
    "pyotp>=2.9",
    "qrcode>=8.0",
    "Pillow",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "coverage",
]
unfold = ["django-unfold"]

[project.urls]
Repository = "https://github.com/wiegon-gmbh/maisen-toolkit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"maisen.toolkit.totp" = ["templates/**/*.html", "migrations/*.py"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
